force-app/main/default/objects/Closeout_Checklist__c/Closeout_Checklist__c.object-meta.xml
<CustomObject>
    <label>Closeout Checklist</label>
    <nameField>
        <displayFormat>CC-{0000000}</displayFormat>
        <label>Closeout Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Closeout Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>