force-app/main/default/objects/Closeout_Checklist__c/fields/FM__c.field-meta.xml
<CustomField>
    <fullName>FM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Closeout FM</relationshipLabel>
    <relationshipName>Closeout_FM</relationshipName>
    <type>Lookup</type>
</CustomField>