force-app/main/default/objects/Closeout_Checklist__c/fields/LOVING_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>LOVING_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the LOVING custom Work_Order__c object. The legacy Work_Order__c field references the FSL standard WorkOrder. This field correctly references the custom operational pipeline object.</description>
    <label>LOVING Work Order</label>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipLabel>Closeout Checklists</relationshipLabel>
    <relationshipName>Closeout_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>