force-app/main/default/objects/Closeout_Checklist__c/fields/NFI_Reason__c.field-meta.xml
<CustomField>
    <fullName>NFI_Reason__c</fullName>
    <label>NFI Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missing Photos</fullName>
            </value>
            <value>
                <fullName>Incomplete Scope</fullName>
            </value>
            <value>
                <fullName>Measurement Mismatch</fullName>
            </value>
            <value>
                <fullName>Material Shortage</fullName>
            </value>
            <value>
                <fullName>Quality Issue</fullName>
            </value>
            <value>
                <fullName>Site Not Ready</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>